fix: correção na responsividade

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="resposively.css">
     <title>Chicago Bulls Burger</title>
 </head>
 
@@ -82,7 +81,7 @@
                             <h2> Nova loja pertinho de você</h2>
                         </p>
                         <p class="text-body">
-                        <p>Não deixe para amanhã o que você pode comer hoje, venha conhecer nossa nova loja.</p>
+                        Não deixe para amanhã o que você pode comer hoje, venha conhecer nossa nova loja.
                         </p>
                         <button class="card-button">Leia mais</button>
                     </div>
@@ -93,12 +92,11 @@
                 <div class="card">
                     <div class="card-img"><img src="assets/img/article/article2.png" alt="hamburguer"></div>
                     <div class="card-info">
-                        <!-- <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M4.828 21l-.02.02-.021-.02H2.992A.993.993 0 0 1 2 20.007V3.993A1 1 0 0 1 2.992 3h18.016c.548 0 .992.445.992.993v16.014a1 1 0 0 1-.992.993H4.828zM20 15V5H4v14L14 9l6 6zm0 2.828l-6-6L6.828 19H20v-1.172zM8 11a2 2 0 1 1 0-4 2 2 0 0 1 0 4z" fill="currentColor"></path></svg> -->
                         <p class="text-title">
                         <h2> Hamburgada Brasilia</h2>
                         </p>
                         <p class="text-body">
-                        <p>Brasilia vai receber o seu primeiro festival do hamburguer.</p>
+                        Brasilia vai receber o seu primeiro festival do hamburguer.
                         </p>
                         <button class="card-button">Leia mais</button>
                     </div>
@@ -108,12 +106,11 @@
                 <div class="card">
                     <div class="card-img"><img  src="assets/img/article/article3.png" alt="hamburguer"></div>
                     <div class="card-info">
-                        <!-- <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M4.828 21l-.02.02-.021-.02H2.992A.993.993 0 0 1 2 20.007V3.993A1 1 0 0 1 2.992 3h18.016c.548 0 .992.445.992.993v16.014a1 1 0 0 1-.992.993H4.828zM20 15V5H4v14L14 9l6 6zm0 2.828l-6-6L6.828 19H20v-1.172zM8 11a2 2 0 1 1 0-4 2 2 0 0 1 0 4z" fill="currentColor"></path></svg> -->
                         <p class="text-title">
                         <h2> Corbucci quebra recordes</h2>
                         </p>
                         <p class="text-body">
-                        <p>Ricardo Corbucci quebra o recorde da casa e se torna nosso Bulls King.</p>
+                        Ricardo Corbucci quebra o recorde da casa e se torna nosso Bulls King.
                         </p>
                         <button class="card-button">Leia mais</button>
                     </div>
@@ -123,12 +120,11 @@
                 <div class="card">
                     <div class="card-img"><img  src="assets/img/article/article4.png" alt="hamburguer"></div>
                     <div class="card-info">
-                        <!-- <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M4.828 21l-.02.02-.021-.02H2.992A.993.993 0 0 1 2 20.007V3.993A1 1 0 0 1 2.992 3h18.016c.548 0 .992.445.992.993v16.014a1 1 0 0 1-.992.993H4.828zM20 15V5H4v14L14 9l6 6zm0 2.828l-6-6L6.828 19H20v-1.172zM8 11a2 2 0 1 1 0-4 2 2 0 0 1 0 4z" fill="currentColor"></path></svg> -->
                         <p class="text-title">
                         <h2> Selo Ana Maria</h2>
                         </p>
                         <p class="text-body">
-                        <p>Chicago Bulls Burguer recebe o prêmio Ana Maria, como melhor Hamburgueria de Brasília</p>
+                        Chicago Bulls Burguer recebe o prêmio Ana Maria, como melhor Hamburgueria de Brasília
                         </p>
                         <button class="card-button">Leia mais</button>
                     </div>
